<resources>
    <string name="app_name">My Quiz</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_question">Enter your name</string>
    <string name="welcome_button_text">Start</string>
    <string name="welcome_name_hint">Name</string>
    <string name="quiz_app">Quiz App!</string>
    <string name="quiz_question_content_description">Quiz question image</string>
    <string name="submit">Submit</string>
    <string name="quiz_complete">Finish</string>
</resources>