<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/ic_bg"
    android:gravity="center">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/quiz_app"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginBottom="30dp" />
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="10dp"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textStyle="bold"
                android:text="@string/welcome"
                android:gravity="center"
                android:textColor="@color/title"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginTop="16dp"
                android:text="@string/welcome_question"
                android:gravity="center"
                android:textColor="@color/subtitle"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" />
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/welcome_name_hint"
                    android:inputType="textCapWords"
                    android:textColor="@color/title"
                    android:textColorHint="@color/subtitle" />
            <Button
                android:id="@+id/startButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_button_text"
                android:layout_marginTop="16dp"
                android:background="@color/purple_500"
                android:textAllCaps="true" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>